--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #f8f9ff;
+  background-color: #202020;
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
@@ -15,7 +15,7 @@ body {
 .app {
   max-width: 480px;
   margin: auto;
-  background: white;
+  background: #1c1c1c;
   border-radius: 24px;
   box-shadow: 0 4px 16px rgba(0,0,0,0.1);
   overflow: hidden;
@@ -33,6 +33,7 @@ body {
 .logo {
   font-weight: 600;
   font-size: 20px;
+  
 }
 
 .nav-links a {
@@ -56,18 +57,30 @@ body {
 }
 
 .card {
-  background-color: #f3f4f6;
+  background-color: rgb(45, 45, 45);
+  color: white;
   border-radius: 12px;
   padding: 16px;
   transition: 0.3s;
   cursor: pointer;
 }
 .card:hover {
-  background-color: #e0e7ff;
+  background-color: #3b82f6;
 }
 
 .booking-form {
   padding: 20px;
+}
+.booking-form label{
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.booking-form p {
+  color: #00ff59;
+  font-size: 21px;
+  font-weight: 600;
 }
 
 .booking-form h2 {
@@ -93,6 +106,16 @@ body {
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
+
+}
+
+.back-btn{
+  padding: 10px;
+  color: white;
+  background-color:#202020 ;
+  width: 120px;
+  border: none;
+  border-radius: 12px;
 }
 
 .book-btn:hover {
@@ -100,8 +123,9 @@ body {
 }
 
 .dashboard {
-  background: #f3f4f6;
+  background: #1c1c1c;
   padding: 20px;
+  color: white;
   margin-top: 10px;
   text-align: center;
 }
@@ -114,8 +138,9 @@ body {
 }
 
 .stat-box {
-  background: white;
+  background: rgb(45, 45, 45);
   border-radius: 12px;
+  color: white;
   padding: 12px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 }
@@ -124,8 +149,8 @@ body {
   text-align: center;
   padding: 14px;
   font-size: 13px;
-  background: #f9fafb;
-  color: #666;
+  background: #3b82f6;
+  color: #c7c7c7;
 }
 
 /* 📱 Responsive */
