--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,8 @@
 }
 
 body {
- background: #3a56b4;
-  background: #3F5EFB;
-background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(4, 30, 66, 1) 100%);
+
+background: black;
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
@@ -15,9 +14,10 @@ background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(4, 30, 66, 1) 
 }
 
 .app {
+  
   max-width: 480px;
   margin: auto;
-  background: rgba(255, 255, 255, 0.181);
+  background: #656c761a;
     border-radius: 46px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
@@ -29,16 +29,18 @@ background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(4, 30, 66, 1) 
 }
 
 .navbar {
-  background-color: #041E42;
+  background-color: #000000;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius:25px ;
   padding: 16px 24px;
-  width: 96%;
+  width: 86%;
   margin: 0 auto;
-  margin-top: 10px;
+  
 }
 .nav-links {
   font-size: 26px;
@@ -72,9 +74,10 @@ background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(4, 30, 66, 1) 
 }
 
 .card {
-  background-color: #041E42;
+  background-color: #2a313c;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   color: white;
-  border-radius: 12px;
+  border-radius: 22px;
   padding: 16px;
   transition: 0.3s;
   cursor: pointer;
@@ -138,7 +141,14 @@ background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(4, 30, 66, 1) 
 }
 
 .dashboard {
-  background: #1c1c1c;
+   background: rgb(0, 0, 0);
+    border-top-left-radius: 46px;
+    border-top-right-radius: 46px;
+    border-bottom-left-radius: 0px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
   padding: 20px;
   color: white;
   margin-top: 10px;
@@ -153,8 +163,9 @@ background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(4, 30, 66, 1) 
 }
 
 .stat-box {
-  background: rgb(45, 45, 45);
-  border-radius: 12px;
+  background: #212830;
+  border-radius: 17px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   color: white;
   padding: 12px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.05);
