--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ background: black;
   cursor: pointer;
 }
 .card:hover {
-  background-color: #3b82f6;
+  background-color: #000000;
 }
 
 .booking-form {
@@ -96,9 +96,13 @@ background: black;
 }
 
 .booking-form p {
-  color: #00ff59;
+  color: #ffffff;
   font-size: 21px;
   font-weight: 600;
+}
+
+span{
+  color: #00ff59;
 }
 
 .booking-form h2 {
@@ -111,32 +115,37 @@ background: black;
   padding: 10px;
   margin: 8px 0 16px;
   border-radius: 10px;
-  border: 1px solid #ddd;
+  background-color: #2a313c;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 20px;
+  color: white;
 }
 
 .book-btn {
   width: 100%;
-  background-color: #3b82f6;
+  background-color: #2a313c;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   color: white;
   border: none;
-  padding: 12px;
+  padding: 18px;
   border-radius: 12px;
   font-size: 16px;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.2s;
 
 }
 
 .back-btn{
   padding: 10px;
   color: white;
-  background-color:#202020 ;
+  background-color: #2a313c;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   width: 120px;
-  border: none;
   border-radius: 12px;
+  transition: 0.2s;
 }
 
-.book-btn:hover {
+.book-btn , .back-btn:hover {
   background-color: #2563eb;
 }
 
@@ -175,7 +184,8 @@ background: black;
   text-align: center;
   padding: 14px;
   font-size: 13px;
-  background: #3b82f6;
+  background-color: #2a313c;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   color: #c7c7c7;
 }
 
