--- a/src/index.css
+++ b/src/index.css
@@ -95,10 +95,11 @@ background: black;
 
 .booking-form {
   padding: 20px;
+  margin-top: 20px;
 }
 .booking-form label{
   color: #ffffff;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
 }
 
@@ -126,6 +127,7 @@ span{
   border: 1px solid rgba(255, 255, 255, 0.2);
   padding: 20px;
   color: white;
+  margin-top: 20px;
 }
 
 .book-btn {
