--- a/src/index.css
+++ b/src/index.css
@@ -144,8 +144,9 @@ span{
 
 }
 
+
 .back-btn{
-  margin-left: 69%;
+  margin-right: auto;
   padding: 10px;
   color: white;
   background-color: #2a313c;
