--- a/src/index.css
+++ b/src/index.css
@@ -28,27 +28,31 @@ background: rgb(0, 0, 0);
 }
 
 .navbar {
-  background-color: #000000;
+
+  background-color: #2b71e3;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.2);
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 20px;  
-  padding: 16px 24px;
-  width: 86%;
+  border-bottom-left-radius: 40px;  
+  border-bottom-right-radius: 40px; 
+  padding: 9px 34px;
+  width: 100%;
   margin: 0 auto;
-  margin-top: 10px;
   
 }
 .nav-links {
-  font-size: 20px;
+  font-size: 22px;
 }
 
 
 .logo {
   font-weight: 600;
-  font-size: 20px;
+  font-size: 23px;
   
 }
 
@@ -73,20 +77,21 @@ background: rgb(0, 0, 0);
 }
 
 .card {
-     background: rgb(0, 0, 0);
+     background: rgb(255, 255, 255);
     border-radius: 46px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(90px);
+    -webkit-backdrop-filter: blur(90px);
     border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 22px;
   padding: 16px;
   transition: 0.3s;
   cursor: pointer;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .card:hover {
-  background-color: #000000;
+  background-color: #ffffff;
+  color: #2563eb;
 }
 .vaqt{
   width: 125px;
@@ -114,7 +119,7 @@ background: rgb(0, 0, 0);
 }
 
 span{
-  color: #00ff59;
+  color: #000000;
 }
 
 .booking-form h2 {
