--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,6 @@ background: rgb(0, 0, 0);
   background-color: transparent;
   border: none;
   color: white;
-
   font-weight: 600;
   font-size: 25px;
   
@@ -243,6 +242,93 @@ span{
   border: 1px solid rgba(255, 255, 255, 0.2);
   color: #c7c7c7;
 }
+
+/* Drawer container */
+.drawer {
+  position: fixed;
+  top: 0;
+  left: -250px; /* ekrandan tashqarida boshlaydi */
+  width: 250px;
+  height: 50%;
+  background-color: #ffffff;
+   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  color: white;
+  padding: 20px;
+  transition: left 0.3s ease;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+}
+
+.drawer.open {
+  left: 0;
+}
+
+/* Close button */
+.drawer .close-btn {
+  align-self: flex-end;
+  width: 40px;
+  padding: 10px;
+   background-color: white;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  background: transparent;
+  border: none;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+/* Drawer menu items */
+.drawer ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  
+}
+
+.drawer ul li {
+  width: 210px;
+  color: #000000;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  margin: 15px 0;
+  border-radius: 20px;
+  color: #2563eb;
+  transition: all 0.3s;
+}
+
+.drawer ul li:hover{
+  width: 280px;
+  background-color: #ffffff;
+  color: white;
+}
+
+.drawer ul li a {
+  width: 80%;
+  text-decoration: none;
+ color: #2563eb;
+  font-weight: 600;
+  font-size: 18px;
+  transition: color 0.2s;
+}
+
+
+/* Overlay (ekran qorayishi) */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 900;
+}
+
+
 
 /* 📱 Responsive */
 @media (max-width: 480px) {
